--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,9 @@ Django==4.2.10
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
+django-filter==23.5
 psycopg2-binary>=2.9.9
 Pillow>=10.2.0
 python-dotenv==1.0.1
 drf-yasg==1.21.7
 setuptools>=67.8.0
-djangorestframework-simplejwt==5.3.1
